--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,6 +14,7 @@
         <PackageVersion Include="SharpZipLib" Version="1.4.2"/>
         <PackageVersion Include="SSH.NET" Version="2023.0.0"/>
         <PackageVersion Include="System.Text.Json" Version="6.0.9"/>
+        <PackageVersion Include="CassandraCSharpDriver" Version="3.21.0" />
         <!-- Unit and integration test dependencies: -->
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageVersion Include="Microsoft.Extensions.Diagnostics.Testing" Version="8.2.0"/>
